PostGIS 1.0.0
??????????
	- small build scripts refinements
	- BUGFIX in box3d computation (yes, another!)
	- BUGFIX in estimated_extent() 

PostGIS 1.0.0RC4
2005/03/18
	- early return from force_collection
	- segfault fix in geom_accum()
	- consistency check fix in SnapToGrid()
	- jdbc2: code cleanups, Makefile improvements
	- FLEX & YACC variables set *after* pgsql Makefile.global
	  is included and only if the pgsql *stripped* version
	  evaulates to the empty string
	- added already generated parser in release
	- build scripts refinements
	- MultiLine handling BUG fix in loader and dumper
	- improved version handling, central Version.config
        - added distance_sphere function 
	- subselects support in selectivity estimator 
	- bug fixes for 64bit architectures
	- bugfix in loaded, skipping all but first hole of polygons.
	- changed get_proj4_from_srid implementation to use plpgsql
	  instead of sql to workaround a pgsql80x bug.
	- box2d output changed back to 15 significant digits
	- BUGFIX in box3d computation function with collections
	- improvements in postgis_restore.pl

PostGIS 1.0.0RC3
2005/02/24
	- transform(): missing SRID bugfix, better error handling
	- jdbc2: small patches, box2d/3d tests, revised docs and license.
	- jdbc2: bug fix and testcase in for pgjdbc 8.0 type autoregistration
	- few changes in autoconf 
	- reduced precision of box2d output.
	- some functions made IMMUTABLE from STABLE,
	  for performance improvement
	- new performance tips chapter in manual
	- BUILDDATE extraction made more portable
	- fixed bogus 72 index bindings
	- prefixed DEBUG macros with PGIS_ to avoid clash with pgsql one
	- fixes in probe_geometry_columns() to work with PG72 and support
	  multiple geometry columns in a single table
	- fixed spatial_ref_sys.sql to avoid vacuuming the whole database.
	- jdbc2: Removed use of jdk1.4 only features to enable build with 
	  older jdk releases.
	- jdbc2: Added support for building against pg72jdbc2.jar