@@ -2,7 +2,8 @@ PostGIS 1.0.0
 ??????????
 	- small build scripts refinements
 	- BUGFIX in box3d computation (yes, another!)
-	- BUGFIX in estimated_extent() 
+	- BUGFIX in estimated_extent()
+        - additional performance tips documented
 
 PostGIS 1.0.0RC4
 2005/03/18
